--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline - EProject-Phase-1
+name: CI/CD Pipeline for EProject
 
 on:
   push:
@@ -7,62 +7,81 @@ on:
     branches: [ main ]
 
 jobs:
-  # === 1. CI JOB ===
-  ci:
-    name: CI - Build & Test
+  build-and-test:
     runs-on: ubuntu-latest
+
+    services:
+      mongo:
+        image: mongo:latest
+        ports:
+          - 27017:27017
+        options: >-
+          --health-cmd "mongosh --eval 'db.runCommand({ ping: 1 })'"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
+      rabbitmq:
+        image: rabbitmq:3-management
+        ports:
+          - 5672:5672
+          - 15672:15672
+        options: >-
+          --health-cmd "rabbitmqctl status"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '18'
 
-      - name: Install dependencies for all services
-        run: |
-          cd api-gateway && npm ci && cd ..
-          cd auth && npm ci && cd ..
-          cd product && npm ci && cd ..
-          cd order && npm ci && cd ..
+      # =====================
+      #  Build and Test Product Service
+      # =====================
+      - name: Install dependencies for Product Service
+        working-directory: ./product
+        run: npm install
 
-      - name: Run tests (optional)
+      - name: Run tests for Product Service
         working-directory: ./product
         run: |
-          if [ -f package.json ] && grep -q "\"test\"" package.json; then npm test; else echo "No tests defined"; fi
+          if [ -f package.json ] && grep -q "\"test\"" package.json; then 
+            npm test 
+          else 
+            echo "No tests defined"; 
+          fi
 
-  # === 2. DOCKER JOB ===
-  docker:
-    name: Build & Push Docker Images
-    runs-on: ubuntu-latest
-    needs: ci
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Login to Docker Hub
+      # =====================
+      #  Build Docker Images
+      # =====================
+      - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
 
-      - name: Build & push api-gateway
+      - name: Build and push API Gateway image
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/eproject-api-gateway:latest ./api-gateway
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/eproject-api-gateway:latest
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/api-gateway:latest ./api-gateway
+          docker push ${{ secrets.DOCKER_USERNAME }}/api-gateway:latest
 
-      - name: Build & push auth
+      - name: Build and push Auth Service image
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/eproject-auth:latest ./auth
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/eproject-auth:latest
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/auth:latest ./auth
+          docker push ${{ secrets.DOCKER_USERNAME }}/auth:latest
 
-      - name: Build & push product
+      - name: Build and push Product Service image
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/eproject-product:latest ./product
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/eproject-product:latest
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/product:latest ./product
+          docker push ${{ secrets.DOCKER_USERNAME }}/product:latest
 
-      - name: Build & push order
+      - name: Build and push Order Service image
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/eproject-order:latest ./order
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/eproject-order:latest
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/order:latest ./order
+          docker push ${{ secrets.DOCKER_USERNAME }}/order:latest
