--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,78 +1,106 @@
-name: CI/CD Pipeline for EProject
+name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, master ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, master ]
 
 jobs:
-  build-and-test:
+  # 🧪 Job 1: TEST
+  test:
+    name: 🧪 Run Tests
     runs-on: ubuntu-latest
 
     services:
-      mongo:
+      mongodb:
         image: mongo:latest
         ports:
           - 27017:27017
-        options: >-
-          --health-cmd "mongosh --eval 'db.runCommand({ ping: 1 })'"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
-
+        env:
+          MONGO_INITDB_ROOT_USERNAME: root
+          MONGO_INITDB_ROOT_PASSWORD: password
       rabbitmq:
         image: rabbitmq:3-management
         ports:
           - 5672:5672
           - 15672:15672
-        options: >-
-          --health-cmd "rabbitmqctl status"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: 18
 
-      # =====================
-      #  Build and Test Product Service
-      # =====================
-      - name: Install dependencies for Product Service
+      # Cài dependencies cho từng service
+      - name: Install dependencies (auth)
+        working-directory: ./auth
+        run: npm install
+
+      - name: Install dependencies (product)
         working-directory: ./product
         run: npm install
 
-      # =====================
-      #  Build Docker Images
-      # =====================
+      - name: Install dependencies (order)
+        working-directory: ./order
+        run: npm install
+
+      # Chạy test (có thể chỉ cần product hoặc auth)
+      - name: Run product tests
+        working-directory: ./product
+        run: npm test
+        env:
+          MONGODB_URI: mongodb://root:password@localhost:27017/test_db?authSource=admin
+          RABBITMQ_URL: amqp://localhost:5672
+          JWT_SECRET: test_secret_key
+
+  # 🐳 Job 2: BUILD & PUSH DOCKER
+  build-and-push:
+    name: 🐳 Build and Push Docker Images
+    runs-on: ubuntu-latest
+    needs: test   # chỉ chạy sau khi test xong
+
+    strategy:
+      matrix:
+        service: [auth, product, order, api-gateway]
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push API Gateway image
-        run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/api-gateway:latest ./api-gateway
-          docker push ${{ secrets.DOCKER_USERNAME }}/api-gateway:latest
+      - name: Build and push ${{ matrix.service }}
+        uses: docker/build-push-action@v5
+        with:
+          context: ./${{ matrix.service }}
+          push: true
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/eproject-${{ matrix.service }}:latest
+            ${{ secrets.DOCKER_USERNAME }}/eproject-${{ matrix.service }}:${{ github.sha }}
+          cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/eproject-${{ matrix.service }}:latest
+          cache-to: type=inline
 
-      - name: Build and push Auth Service image
-        run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/auth:latest ./auth
-          docker push ${{ secrets.DOCKER_USERNAME }}/auth:latest
+  # 📢 Job 3: NOTIFY
+  notify:
+    name: 📢 Deployment Notification
+    runs-on: ubuntu-latest
+    needs: build-and-push
 
-      - name: Build and push Product Service image
+    steps:
+      - name: Send summary message
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/product:latest ./product
-          docker push ${{ secrets.DOCKER_USERNAME }}/product:latest
-
-      - name: Build and push Order Service image
-        run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/order:latest ./order
-          docker push ${{ secrets.DOCKER_USERNAME }}/order:latest
+          echo "✅ CI/CD pipeline completed successfully!"
+          echo "🧪 Tests passed on branch: ${{ github.ref_name }}"
+          echo "🐳 Docker images pushed to Docker Hub: ${{ secrets.DOCKER_USERNAME }}/eproject-*"
+          echo "🔖 Commit: ${{ github.sha }}"
