--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,7 +7,6 @@ on:
     branches: [ main, master ]
 
 jobs:
-  # 🧪 Job 1: TEST
   test:
     name: 🧪 Run Tests
     runs-on: ubuntu-latest
@@ -20,6 +19,7 @@ jobs:
         env:
           MONGO_INITDB_ROOT_USERNAME: root
           MONGO_INITDB_ROOT_PASSWORD: password
+
       rabbitmq:
         image: rabbitmq:3-management
         ports:
@@ -35,7 +35,6 @@ jobs:
         with:
           node-version: 18
 
-      # Install dependencies for all services
       - name: Install dependencies (auth)
         working-directory: ./auth
         run: npm install
@@ -48,12 +47,11 @@ jobs:
         working-directory: ./order
         run: npm install
 
-      # Start Auth service
       - name: Start Auth service
         working-directory: ./auth
         env:
           PORT: 3000
-          MONGODB_AUTH_URI: mongodb://root:password@mongodb:27017/authDB?authSource=admin
+          MONGODB_AUTH_URI: mongodb://root:password@localhost:27017/authDB?authSource=admin
           JWT_SECRET: secretkey123
         run: |
           echo "🚀 Starting Auth Service..."
@@ -75,13 +73,12 @@ jobs:
             exit 1
           fi
 
-      # Run Product tests
       - name: Run Product tests
         working-directory: ./product
         env:
           PORT: 3001
-          MONGODB_AUTH_URI: mongodb://root:password@mongodb:27017/authDB?authSource=admin
-          MONGODB_PRODUCT_URI: mongodb://root:password@mongodb:27017/productDB?authSource=admin
+          MONGODB_AUTH_URI: mongodb://root:password@localhost:27017/authDB?authSource=admin
+          MONGODB_PRODUCT_URI: mongodb://root:password@localhost:27017/productDB?authSource=admin
           RABBITMQ_URL: amqp://localhost:5672
           JWT_SECRET: secretkey123
           LOGIN_TEST_USER: TruongVyHao
